# vitamin-c

./: .travis.yml  .vimrc  CMakeLists.txt  LICENSE  README.md  build.sh
libvitc/: CMakeLists.txt
libvitc/include/: test.h
libvitc/include/vitc/: config.h  input.h  test.h  vitc.h
libvitc/src/: config.c  input.c  test.c  vitc.c
libvitc/tests/: test.cpp
src/: banner.c  main.c
